[FEAT][CHORE][TEST]
Stable project.
-New test execution module with java 9.
-Module of original test for executions with maven, generation of coverage ...