@@ -11,14 +11,10 @@
     <artifactId>drone-test-module</artifactId>
 
     <properties>
-        <jacoco.reportPath>${project.basedir}/target/jacoco.exec</jacoco.reportPath>
-
         <jacoco.version>0.8.1</jacoco.version>
         <mockito2.version>2.18.0</mockito2.version>
-        <powermock.version>2.0.0-beta.5</powermock.version>
         <build-helper-maven-plugin>1.9.1</build-helper-maven-plugin>
         <maven-javadoc-plugin>3.0.0</maven-javadoc-plugin>
-        <apache-maven-plugins>2.18.1</apache-maven-plugins>
         <junit.version>4.12</junit.version>
        
         <!--It will be used to locate the file to be used-->
@@ -97,40 +93,6 @@
                 <skip.unit.tests>true</skip.unit.tests>
             </properties>
         </profile>
-        <profile>
-            <id>j9</id>
-            <build>
-                <plugins>
-                    <!--<plugin>-->
-                        <!--<groupId>org.codehaus.mojo</groupId>-->
-                        <!--<artifactId>exec-maven-plugin</artifactId>-->
-                        <!--<version>1.6.0</version>-->
-                        <!--<executions>-->
-                            <!--<execution>-->
-                                <!--<goals>-->
-                                    <!--<goal>exec</goal>-->
-                                <!--</goals>-->
-                            <!--</execution>-->
-                        <!--</executions>-->
-                        <!--<configuration>-->
-                            <!--<executable>java</executable>-->
-                            <!--<arguments>-->
-                                <!--<argument>&#45;&#45;module-path</argument>-->
-                                <!--<modulepath/>-->
-                                <!--<argument>&#45;&#45;add-modules</argument>-->
-                                <!--<argument>drone.test.module</argument>-->
-                                <!--<argument>&#45;&#45;module</argument>-->
-                                <!--<argument>junit/org.junit.runner.JUnitCore</argument>-->
-                                <!--<argument>com.test.driver.DriverUTest</argument>-->
-                                <!--<argument>com.test.service.UrbanizationsTreatmentServiceUTest</argument>-->
-                                <!--<argument>com.test.service.UrbanizationsTreatmentSimulatedServiceUTest</argument>-->
-                            <!--</arguments>-->
-                        <!--</configuration>-->
-                    <!--</plugin>-->
-                    <!---->
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <build>
@@ -195,33 +157,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>--module-path</argument>
-                        <modulepath/>
-                        <argument>--add-modules</argument>
-                        <argument>com.test</argument>
-                        <argument>--module</argument>
-                        <argument>junit/org.junit.runner.JUnitCore</argument>
-                        <argument>test.driver.DriverUTest</argument>
-                        <argument>test.service.UrbanizationsTreatmentServiceUTest</argument>
-                        <argument>test.service.UrbanizationsTreatmentSimulatedServiceUTest</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
@@ -239,24 +174,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-core</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
